[gd_scene load_steps=11 format=2]

[ext_resource path="res://puzzle_handler/puzzles/connection/connection.gd" type="Script" id=1]
[ext_resource path="res://addons/blunt_background/blunt_background.tscn" type="PackedScene" id=2]
[ext_resource path="res://puzzle_handler/assets/theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://puzzle_handler/assets/image/close_button.png" type="Texture" id=4]
[ext_resource path="res://puzzle_handler/assets/font/Roboto/Roboto-Medium.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.360784, 0.490196, 0.694118, 1 )

[sub_resource type="DynamicFont" id=11]
size = 18
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.819608, 0.901961, 0.0117647, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.819608, 0.901961, 0.0117647, 1 )
corner_radius_bottom_left = 10
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.133333, 0.25098, 0.439216, 1 )
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 1
shadow_color = Color( 0.109804, 0.207843, 0.368627, 1 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )

[node name="Connection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Energy" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="BluntBackground" parent="." instance=ExtResource( 2 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 20
custom_constants/margin_left = 60
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 60.0
margin_top = 20.0
margin_right = 1220.0
margin_bottom = 700.0

[node name="BarContainer" type="Panel" parent="MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1160.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Close" type="TextureButton" parent="MarginContainer/VBoxContainer/BarContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -44.0
size_flags_horizontal = 8
texture_normal = ExtResource( 4 )

[node name="GameContainer" type="Panel" parent="MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 52.0
margin_right = 1160.0
margin_bottom = 680.0
rect_clip_content = true
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/GameContainer"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -24.0
margin_right = 64.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
text = " CONTINUAR "

[node name="EnergyContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameContainer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/GameContainer/EnergyContainer"]
unique_name_in_owner = true
margin_right = 1160.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 5.0
step = 1.0
rounded = true

[node name="Cells" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GameContainer/EnergyContainer"]
margin_top = 44.0
margin_right = 1160.0
margin_bottom = 628.0
size_flags_vertical = 3
custom_constants/separation = 60

[node name="Output" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameContainer/EnergyContainer/Cells"]
unique_name_in_owner = true
margin_right = 550.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Input" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameContainer/EnergyContainer/Cells"]
unique_name_in_owner = true
margin_left = 610.0
margin_right = 1160.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[connection signal="pressed" from="MarginContainer/VBoxContainer/BarContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameContainer/Continue" to="." method="_on_Continue_pressed"]
